# legal-triage-openenv

./: .env.example  .gitignore  Dockerfile  EVALUATOR_GUIDE.md  README.md  inference.py  meta.md  openenv.yaml  pyproject.toml  requirements.txt  run_local.py  run_openenv.sh  test.py
api/: main.py
app/: env.py  models.py  reward.py
app/data/: legal_cases.py
app/graders/: legal_grader.py
app/tasks/: __init__.py
frontend/: app.js  app.ts  index.html  style.css
server/: app.py
